--- a/app/projects/[slug]/mdx.css
+++ b/app/projects/[slug]/mdx.css
@@ -43,7 +43,8 @@ img {
   color: #d1d5db; /* Zinc-300 for text */
   border-radius: 0.375rem; /* rounded-lg */
   padding: 0.5rem;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+  box-shadow:
+    0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
